# ucware-cli

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/: cmd.rs  lib.rs  main.rs
src/sipsocket/: mod.rs
src/ucware/: mod.rs  token.rs
src/ucware/user/: authentication.rs  mod.rs  slot.rs
