[package]
name = "ucware-cli"
description = "Tools to interact with UCWare"
version = "0.1.0"
edition = "2024"

authors = [
    "Dustin Frisch <fooker@lab.sh>",
]

license = "MIT"

[dependencies]
anyhow = "1.0.100"

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["connect", "handshake", "native-tls"]}
futures = { version = "0.3.31", features = ["default", ] }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

clap = { version = "4.5.51", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
serde_json = "1.0.145"
serde_yaml = "0.9.33"

jsonrpsee = { version = "0.26.0", features = ["async-client", "macros", "http-client"] }
http = "1.3.1"
url = "2.5.7"

[lints.rust]
bad_style = "deny"
dead_code = "deny"
improper_ctypes = "deny"
non_shorthand_field_patterns = "deny"
no_mangle_generic_items = "deny"
overflowing_literals = "deny"
path_statements = "deny"
patterns_in_fns_without_body = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unconditional_recursion = "deny"
unused = "deny"
unused_allocation = "deny"
unused_comparisons = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_qualifications = "deny"
while_true = "deny"

incomplete_features = { level = "allow", priority = -1 }

[lints.clippy]
needless_return = "allow"
